--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,19 @@ source/live2d-widget/assets/
 source/live2d-widget/demo/
 source/live2d-widget/LICENSE
 source/live2d-widget/README.md
+
+themes/next/.git
+themes/next/.github
+themes/next/docs/
+themes/next/languages/
+themes/next/.editorconfig
+themes/next/.eslintrc.json
+themes/next/.gitattributes
+themes/next/.gitignore
+themes/next/.stylintrc
+themes/next/.travis.yml
+themes/next/crowdin.yml
+themes/next/gulpfils.js
+themes/next/LICENSE.md
+themes/next/package.json
+themes/next/README.md
