修改了看板娘与back2top的位置关系

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -152,8 +152,8 @@ menu_icons:
 
 sidebar:
   # Sidebar Position.
+#  position: left
   position: left
-  #position: right
 
   # Manual define the sidebar width. If commented, will be default for:
   # Muse | Mist: 320
@@ -402,7 +402,7 @@ codeblock:
 back2top:
   enable: true
   # Back to top in sidebar.
-  sidebar: false
+  sidebar: true
   # Scroll percent label in b2t button.
   scrollpercent: true
 
