--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -228,6 +228,7 @@ links:
   【金牌选手 LuKelmouse】: https://www.cnblogs.com/lukelmouse/
   【全栈选手 Galgaddott】: https://www.versewow.cn/
   【国奖选手 Lofipure】: http://49.234.89.129/
+  【Java选手 noShampoo】: http://212.64.61.242/
   /* 压缩图片快速入口 */: https://imagecompressor.com/zh/
   /* 格式转换快速入口 */: https://convertio.co/zh/
 
