feat: 🎸 调整 subtitle

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ search:
 
 # Site
 title: Euphoria's Blog
-# subtitle: '<strong><span style="color: #FF0000">Quitters</span> Never Win,<br/> <span style="color: #007FFF">Winners</span> Never Quit.</strong>'
+subtitle: '<strong>Quitters Never Win,<br/>Winners Never Quit.</strong>'
 description: "我摸到了梦，<br/>也看到了光。"
 keywords: Euphoria
 author: 王钦弘
