--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -76,7 +76,7 @@ footer:
     # Version info of NexT after scheme info (vX.X.X).
     version: false
 
-  # Beian ICP and gongan information for Chinese users. See: http://www.beian.miit.gov.cn, http://www.beian.gov.cn
+  # Beian ICP and gongan information for Chinese users. See: https://beian.miit.gov.cn, http://www.beian.gov.cn
   beian:
     enable: true
     icp: 陕ICP备 19005593号-2
@@ -85,7 +85,7 @@ footer:
     # The full num of gongan beian.
     gongan_num:
     # The icon for gongan beian. See: http://www.beian.gov.cn/portal/download
-    gongan_icon_url: https://www.wqh4u.cn/uploads/beian.png
+    gongan_icon_url: http://www.wqh4u.cn/uploads/beian.png
 
 # Creative Commons 4.0 International License.
 # See: https://creativecommons.org/share-your-work/licensing-types-examples
